--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <hr size="3" color="grey">
         
         
-        <h3>Contact Me</h3>
+        <h3>Contact me</h3>
         <form class="" action="mailto:jayprakashpandit2001@gmail.com" method="post" enctype="text/plain">
             <label>Your Name:</label>
             <input type="text" name="yourName" value=""><br>
