--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="profile">
               <img src="images/user.png" alt="profile" height="200px">
               <h2>Hello.</h2>
-              <p class="intro">I am Jay form MGM's college of Engineering</p>
+              <p class="intro">I am Jay form MGM's college of Engineering.</p>
             </div>
             <hr>
             <div class="skills">
