--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="middle-container">
             <div class="profile">
-              <img src="images/user.png" alt="profile" height="200px">
+              <img class="user" src="images/user.png" alt="profile" height="200px">
               <h2>Hello.</h2>
               <p class="intro">I am Jay form MGM's college of Engineering.</p>
             </div>
